pathfinder/compiler/parser/Tests/bad-012.xq
<a foo='no (: comments ' in attribute :) content'/>
